[tool.poetry]
name = "demowebapp"
version = "0.0.1"
description = ""
authors = ["Hi120ki <12624257+hi120ki@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
PyMySQL = "^1.0.2"
shfzflask = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
